exports[`invalid(1): {\"exports\": \"./index.js\"} 1`] = `

[Input 'dist/package.json']
  1 | {"exports": "./index.js"}

`;

exports[`invalid(1): {\"exports\": \"./index.js\"} 2`] = `

Message:
> 1 | {"exports": "./index.js"}
    |  ^^^^^^^^^ The \`exports\` field is ignored for a consumer resolving this package by name. Node reads it only for a self-reference from inside this scope, which needs a matching \`name\`.

Suggestion 1/1: Remove the field.:
  1 | {}

`;

exports[`invalid(2): {\"exports\": \"./index.js\", \"imports\": null} 1`] = `

[Input 'dist/package.json']
  1 | {"exports": "./index.js", "imports": null}

`;

exports[`invalid(2): {\"exports\": \"./index.js\", \"imports\": null} 2`] = `

Message:
> 1 | {"exports": "./index.js", "imports": null}
    |  ^^^^^^^^^ The \`exports\` field is ignored for a consumer resolving this package by name. Node reads it only for a self-reference from inside this scope, which needs a matching \`name\`.

Suggestion 1/1: Remove the field.:
  1 | {"imports": null}

`;

exports[`invalid(3): {\"exports\": \"./first.js\", \"exports\": \"./second.js\"} 1`] = `

[Input 'dist/package.json']
  1 | {"exports": "./first.js", "exports": "./second.js"}

`;

exports[`invalid(3): {\"exports\": \"./first.js\", \"exports\": \"./second.js\"} 2`] = `

Message:
> 1 | {"exports": "./first.js", "exports": "./second.js"}
    |                           ^^^^^^^^^ The \`exports\` field is ignored for a consumer resolving this package by name. Node reads it only for a self-reference from inside this scope, which needs a matching \`name\`.

Suggestion 1/1: Remove the field.:
  1 | {}

`;

exports[`invalid(4): {\"name\": \"foo\", \"exports\": \"./first.js\", \"exports\": \"./second.js\"} 1`] = `

[Input 'dist/package.json']
  1 | {"name": "foo", "exports": "./first.js", "exports": "./second.js"}

`;

exports[`invalid(4): {\"name\": \"foo\", \"exports\": \"./first.js\", \"exports\": \"./second.js\"} 2`] = `

Message:
> 1 | {"name": "foo", "exports": "./first.js", "exports": "./second.js"}
    |                                          ^^^^^^^^^ The \`exports\` field is ignored for a consumer resolving this package by name. Node reads it only for a self-reference from inside this scope, which needs a matching \`name\`.

Suggestion 1/1: Remove the field.:
  1 | {"name": "foo"}

`;

exports[`invalid(5): {\"exports\": \"./first.js\", \"exports\": \"./second.js\", \"name\": \"foo\"} 1`] = `

[Input 'dist/package.json']
  1 | {"exports": "./first.js", "exports": "./second.js", "name": "foo"}

`;

exports[`invalid(5): {\"exports\": \"./first.js\", \"exports\": \"./second.js\", \"name\": \"foo\"} 2`] = `

Message:
> 1 | {"exports": "./first.js", "exports": "./second.js", "name": "foo"}
    |                           ^^^^^^^^^ The \`exports\` field is ignored for a consumer resolving this package by name. Node reads it only for a self-reference from inside this scope, which needs a matching \`name\`.

Suggestion 1/1: Remove the field.:
  1 | {"name": "foo"}

`;

exports[`invalid(6): {\"exports\": \"./first.js\", \"name\": \"foo\", \"exports\": \"./second.js\"} 1`] = `

[Input 'dist/package.json']
  1 | {"exports": "./first.js", "name": "foo", "exports": "./second.js"}

`;

exports[`invalid(6): {\"exports\": \"./first.js\", \"name\": \"foo\", \"exports\": \"./second.js\"} 2`] = `

Message:
> 1 | {"exports": "./first.js", "name": "foo", "exports": "./second.js"}
    |                                          ^^^^^^^^^ The \`exports\` field is ignored for a consumer resolving this package by name. Node reads it only for a self-reference from inside this scope, which needs a matching \`name\`.

Suggestion 1/1: Remove the field.:
  1 | {"name": "foo"}

`;

exports[`invalid(7): {\n\t\t\t\t\"name\": \"foo\",\n\t\t\t\t\"exports\": \"./index.js\",\n\t\t\t\t\"version\": \"1.0.0\"\n\t\t\t} 1`] = `

[Input 'dist/package.json']
  1 | {
  2 | 				"name": "foo",
  3 | 				"exports": "./index.js",
  4 | 				"version": "1.0.0"
  5 | 			}

`;

exports[`invalid(7): {\n\t\t\t\t\"name\": \"foo\",\n\t\t\t\t\"exports\": \"./index.js\",\n\t\t\t\t\"version\": \"1.0.0\"\n\t\t\t} 2`] = `

Message:
  1 | {
  2 | 				"name": "foo",
> 3 | 				"exports": "./index.js",
    | 				^^^^^^^^^ The \`exports\` field is ignored for a consumer resolving this package by name. Node reads it only for a self-reference from inside this scope, which needs a matching \`name\`.
  4 | 				"version": "1.0.0"
  5 | 			}

Suggestion 1/1: Remove the field.:
  1 | {
  2 | 				"name": "foo",
  3 | 				"version": "1.0.0"
  4 | 			}

`;
